[package]
name = "timada-database"
version = "0.1.0"
authors = ["Jonathan <jonathan@timada.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "1.4.0", features = ["postgres"] }
timada-util = { path = "../util" }

[dev-dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuidv07"] }