[package]
name = "timada-http"
version = "0.1.0"
authors = ["Jonathan <jonathan@timada.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
async-graphql = "1.10.12"
validator = "0.10.0"
thiserror = "1.0.16"
futures = "0.3.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
timada-util = { path = "../util" }